--- a/src/css/outlines.css
+++ b/src/css/outlines.css
@@ -494,12 +494,12 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px;
+    padding-top: 24px;
+    padding-bottom: 20px;
     width: 100%; 
     margin: 0 auto;
     text-align: center;
     position: relative; 
-    left: -20px; 
     user-select: none;
 }
 
