--- a/src/css/aboutUs.css
+++ b/src/css/aboutUs.css
@@ -10,7 +10,17 @@
 /* Стили для картинки */
 .about-us-img {
     width: 100%; 
-    max-height: 240px; 
+    max-height: 360px; 
+}
+
+@media screen and (max-width: 768px) {
+    .about-us-container {
+        height: 20vh;
+    }
+
+    .about-us-img {
+        max-height: 240px;
+    }
 }
 
 /* Стили для формулы успеха */
@@ -20,7 +30,8 @@
     margin: 5% auto; 
     user-select: none;
     filter: blur(7px); 
-    transition: filter 0.3s ease; 
+    transition: filter 0.3s ease;
+    margin-bottom: 4%;
 }
 
 /* Добавляем размытие при наведении */
@@ -50,6 +61,28 @@
     text-decoration: underline;
     font-family: "Monotype Corsiva", serif;
     font-size: 24px; 
+}
+
+@media screen and (max-width: 768px) {
+    .formula {
+        margin-bottom: 10%;
+    }
+
+    .formula strong {
+        font-size: 22px;
+    }
+
+    .formula sup {
+        font-size: 18px;
+    }
+
+    .formula del {
+        font-size: 18px;
+    }
+
+    .formula sub {
+        font-size: 18px;
+    }
 }
 
 /* Стили для контейнера about-us-container-1 */
@@ -106,6 +139,42 @@
     width: 49%;
     height: auto;
     margin-top: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .about-us-container-1 {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .about-us-container-1 .about-us-text {
+        width: 60%;
+        text-align: center;
+        margin-right: 10%;
+    }
+
+    .about-us-container-1 .about-us-text h1 {
+        font-size: 28px;
+        margin-top: 0;  
+    }
+
+    .about-us-container-1 .about-us-text p {
+        font-size: 18px;
+    }
+
+    .about-us-container-1 .about-us-images {
+        width: 100%;
+        margin-right: 30%;
+    }
+
+    .about-us-container-1 .image-pair {
+        flex-direction: column;
+    }
+
+    .about-us-container-1 .image-pair img {
+        height: auto;
+        width: 300px;
+    }
 }
 
 /* Стиль для бесконечной ленты */
@@ -243,4 +312,27 @@
 
 .subscribe-input input[type="email"].invalid + .error-message {
     display: block;
+}
+
+@media screen and (max-width: 768px) {
+    .subscribe-container {
+        flex-direction: column;
+        margin-bottom: 10%;
+    }   
+
+    .subscribe-text h1 {
+        font-size: 18px;
+    }
+
+    .subscribe-text h2 {
+        font-size: 28px;
+    }
+
+    .subscribe-email input[type="email"] {
+        width: 100%;
+    }
+
+    .subscribe-email button {
+        margin-left: -10%;
+    }
 }
