--- a/src/css/outlines.css
+++ b/src/css/outlines.css
@@ -180,6 +180,12 @@ header {
     display: none;
 }
 
+@media screen and (max-width: 1080px) {
+    .menu-list-container {
+        margin-left: 15%;
+    }
+}
+
 /* Стиль для контейнера списка меню */
 .menu-toggle-container {
     float: left; 
@@ -465,10 +471,10 @@ header h1 {
     font-size: 36px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
     .title {
         font-size: 36px; 
-        margin-right: 10px; 
+        margin-right: 10%; 
         margin-left: -5%;
     }
 
@@ -516,7 +522,7 @@ main {
     text-align: center; 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
     .slide {
         font-size: 6px; 
         padding: 5px;
@@ -573,7 +579,7 @@ main {
     margin-bottom: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
     .widget-content {
         margin-top: 5%;
         margin-bottom: 2%;        
@@ -648,7 +654,7 @@ main {
     font-size: 24px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
     .right-column {
         margin-left: 0;
     }
@@ -792,7 +798,7 @@ button:hover {
     font-size: 28px; 
 }
 
-@media screen and (max-width: 768px) { 
+@media screen and (max-width: 1080px) { 
     .quote p {
         font-size: 24px;
     }
@@ -852,7 +858,7 @@ footer {
     margin-left: 5px; 
 }
 
-@media screen and (max-width: 768px) { 
+@media screen and (max-width: 1080px) { 
     .footer-center {
         font-size: 12px;
     }
