--- a/src/css/aboutUs.css
+++ b/src/css/aboutUs.css
@@ -237,12 +237,25 @@
     background-color: #f0f0f0;
     opacity: 0;
     transform: translateY(50px);
+    position: relative;
 }
 
 .subscribe-container.element-show {
     opacity: 1;
     transition: all 2s;
     transform: translateY(0%);
+}
+
+/* Стили для loader */
+.loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    background-color: #f0f0f0; 
+    display: none; 
+    z-index: 2; 
 }
 
 /* Стили для текста подписки */
@@ -292,6 +305,7 @@
     border: none;
     cursor: pointer;
     margin-left: -25%; 
+    position: relative;
 }
 
 /* Стили для значка внутри кнопки */
@@ -312,6 +326,27 @@
 
 .subscribe-input input[type="email"].invalid + .error-message {
     display: block;
+}
+
+/* Стили для loader (круглый индикатор загрузки) */
+.loader::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    border: 4px solid #007bff; 
+    border-top: 4px solid transparent; 
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -70%);
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
 
 @media screen and (max-width: 1080px) {
