--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -60,6 +60,39 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Стили для loader */
+.loader-form {
+    position: absolute;
+    top: 0;
+    margin-left: 20%;
+    width: auto;
+    height: 100%;
+    background-color: #f0f0f0; 
+    display: none; 
+    z-index: 2; 
+}
+
+/* Стили для loader (круглый индикатор загрузки) */
+.loader-form::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    border: 4px solid #007bff; 
+    border-top: 4px solid transparent; 
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -70%);
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
 @media screen and (max-width: 1080px) {
     .info-form-title {
         font-size: 28px;
